Testing of out-of-box models done

--- a/Basic Stats.ipynb
+++ b/Basic Stats.ipynb
@@ -115,14 +115,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(103868, 5)\n"
+      "Shape of dataframe: (103868, 5)\n",
+      "Number of unique classes: 4\n"
      ]
     },
     {
@@ -271,22 +272,21 @@
        "max          2300.0         100.0        900.0  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Shap\" + df.shape)\n",
-    "\n",
+    "print(\"Shape of dataframe: \" + str(df.shape))\n",
     "\n",
     "classes = df.country.unique()\n",
+    "print(\"Number of unique classes: \" + str(len(classes)))\n",
     "\n",
-    "df_accum = (df[df.country==classes[0]].describe().drop(columns=['points', 'price']))\n",
-    "\n",
+    "df_accum = pd.DataFrame()\n",
     "for country in classes:\n",
     "    df_accum = (df_accum.join(df[df.country==country].describe().round(1)\n",
-    "                               .rename(columns={'points': 'points '+country, 'price':'price '+country})))\n",
+    "                               .rename(columns={'points': 'points '+country, 'price':'price '+country}), how='outer'))\n",
     "df_accum"
    ]
   },
