z-scaling not working well?

--- a/Out-of-Box Models + z-scaling.ipynb
+++ b/Out-of-Box Models + z-scaling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,12 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "from sklearn import preprocessing"
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4  Provence red blend  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        " Name: country, dtype: object)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -220,7 +220,7 @@
        "Name: country, dtype: object"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,13 +242,12 @@
     "KNN_model        = KNeighborsClassifier()\n",
     "GaussianNB_model = GaussianNB()\n",
     "DTree_model      = DecisionTreeClassifier()\n",
-    "SVC_model        = LinearSVC()\n",
-    "\n"
+    "SVC_model        = LinearSVC()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,8 +255,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Addition of scaling here"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +295,7 @@
        "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +316,7 @@
        "              solver='svd', store_covariance=False, tol=0.0001)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +338,7 @@
        "           weights='uniform')"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +358,7 @@
        "GaussianNB(priors=None, var_smoothing=1e-09)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +383,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +414,7 @@
        "     verbose=0)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +440,7 @@
        "       seed=None, silent=None, subsample=1, verbosity=1)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,20 +489,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6016655434677963\n",
-      "0.6017618176566862\n",
-      "0.5481370944449793\n",
-      "0.5994512371233273\n",
-      "0.6098488495234428\n",
-      "0.5244536439780495\n",
-      "0.60469818041783\n"
+      "0.16621738711851353\n",
+      "0.16159622605179552\n",
+      "0.16313661307403485\n",
+      "0.31707904110907864\n",
+      "0.14782901704053145\n",
+      "0.17170501588524117\n",
+      "0.1425820737460287\n"
      ]
     }
    ],
@@ -488,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +527,7 @@
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,41 +538,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[   44    12     3     6]\n",
+      "[[1225 1496  328 5281]\n",
+      " [1733 2228 1303 7180]\n",
+      " [   0    0    0    0]\n",
+      " [   0    0    0    0]]\n",
+      "[[1431 1798  417 6627]\n",
+      " [1527 1926 1214 5834]\n",
+      " [   0    0    0    0]\n",
+      " [   0    0    0    0]]\n",
+      "[[1801 2194  583 8352]\n",
+      " [1142 1515 1011 4036]\n",
+      " [   0    0    0    0]\n",
+      " [  15   15   37   73]]\n",
+      "[[1568 1955  479 7442]\n",
+      " [   0    0    0    0]\n",
+      " [   0    0    0    0]\n",
+      " [1390 1769 1152 5019]]\n",
+      "[[ 2318  2974   902 10496]\n",
+      " [  640   748   728  1960]\n",
       " [    0     0     0     0]\n",
+      " [    0     2     1     5]]\n",
+      "[[ 894 1051  229 2961]\n",
+      " [2064 2673 1402 9500]\n",
+      " [   0    0    0    0]\n",
+      " [   0    0    0    0]]\n",
+      "[[ 2950  3712  1607 12397]\n",
+      " [    8    12    24    64]\n",
       " [    0     0     0     0]\n",
-      " [ 2914  3712  1628 12455]]\n",
-      "[[   57    21     7    17]\n",
-      " [    0     0     0     0]\n",
-      " [    0     0     0     0]\n",
-      " [ 2901  3703  1624 12444]]\n",
-      "[[ 538  387  214  854]\n",
-      " [ 421  792  233 1265]\n",
-      " [ 103  107  125  410]\n",
-      " [1896 2438 1059 9932]]\n",
-      "[[  292   169    51   293]\n",
-      " [   13    27     5    34]\n",
-      " [    0     0     0     0]\n",
-      " [ 2653  3528  1575 12134]]\n",
-      "[[  249    99    27   113]\n",
-      " [  162   335    72   252]\n",
-      " [   21    23    55    66]\n",
-      " [ 2526  3267  1477 12030]]\n",
-      "[[  229   141    55  1031]\n",
-      " [  518   523   101  1287]\n",
-      " [    0     0     0     0]\n",
-      " [ 2211  3060  1475 10143]]\n",
-      "[[  131    47    23    37]\n",
-      " [    0     5     0     1]\n",
-      " [    1     0     8     5]\n",
-      " [ 2826  3672  1600 12418]]\n"
+      " [    0     0     0     0]]\n"
      ]
     }
    ],
@@ -558,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -575,80 +601,80 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      France       0.01      0.68      0.03        65\n",
+      "      France       0.41      0.15      0.22      8330\n",
+      "       Italy       0.60      0.18      0.28     12444\n",
+      "       Spain       0.00      0.00      0.00         0\n",
+      "          US       0.00      0.00      0.00         0\n",
+      "\n",
+      "   micro avg       0.17      0.17      0.17     20774\n",
+      "   macro avg       0.25      0.08      0.12     20774\n",
+      "weighted avg       0.52      0.17      0.25     20774\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      France       0.48      0.14      0.22     10273\n",
+      "       Italy       0.52      0.18      0.27     10501\n",
+      "       Spain       0.00      0.00      0.00         0\n",
+      "          US       0.00      0.00      0.00         0\n",
+      "\n",
+      "   micro avg       0.16      0.16      0.16     20774\n",
+      "   macro avg       0.25      0.08      0.12     20774\n",
+      "weighted avg       0.50      0.16      0.24     20774\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      France       0.61      0.14      0.23     12930\n",
+      "       Italy       0.41      0.20      0.27      7704\n",
+      "       Spain       0.00      0.00      0.00         0\n",
+      "          US       0.01      0.52      0.01       140\n",
+      "\n",
+      "   micro avg       0.16      0.16      0.16     20774\n",
+      "   macro avg       0.26      0.21      0.13     20774\n",
+      "weighted avg       0.53      0.16      0.24     20774\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      France       0.53      0.14      0.22     11444\n",
       "       Italy       0.00      0.00      0.00         0\n",
       "       Spain       0.00      0.00      0.00         0\n",
-      "          US       1.00      0.60      0.75     20709\n",
+      "          US       0.40      0.54      0.46      9330\n",
       "\n",
-      "   micro avg       0.60      0.60      0.60     20774\n",
-      "   macro avg       0.25      0.32      0.20     20774\n",
-      "weighted avg       1.00      0.60      0.75     20774\n",
+      "   micro avg       0.32      0.32      0.32     20774\n",
+      "   macro avg       0.23      0.17      0.17     20774\n",
+      "weighted avg       0.47      0.32      0.33     20774\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      France       0.02      0.56      0.04       102\n",
-      "       Italy       0.00      0.00      0.00         0\n",
+      "      France       0.78      0.14      0.24     16690\n",
+      "       Italy       0.20      0.18      0.19      4076\n",
       "       Spain       0.00      0.00      0.00         0\n",
-      "          US       1.00      0.60      0.75     20672\n",
+      "          US       0.00      0.62      0.00         8\n",
       "\n",
-      "   micro avg       0.60      0.60      0.60     20774\n",
-      "   macro avg       0.25      0.29      0.20     20774\n",
-      "weighted avg       0.99      0.60      0.75     20774\n",
-      "\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "      France       0.18      0.27      0.22      1993\n",
-      "       Italy       0.21      0.29      0.25      2711\n",
-      "       Spain       0.08      0.17      0.11       745\n",
-      "          US       0.80      0.65      0.71     15325\n",
-      "\n",
-      "   micro avg       0.55      0.55      0.55     20774\n",
-      "   macro avg       0.32      0.34      0.32     20774\n",
-      "weighted avg       0.64      0.55      0.58     20774\n",
+      "   micro avg       0.15      0.15      0.15     20774\n",
+      "   macro avg       0.25      0.24      0.11     20774\n",
+      "weighted avg       0.67      0.15      0.23     20774\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      France       0.10      0.36      0.16       805\n",
-      "       Italy       0.01      0.34      0.01        79\n",
+      "      France       0.30      0.17      0.22      5135\n",
+      "       Italy       0.72      0.17      0.28     15639\n",
       "       Spain       0.00      0.00      0.00         0\n",
-      "          US       0.97      0.61      0.75     19890\n",
+      "          US       0.00      0.00      0.00         0\n",
       "\n",
-      "   micro avg       0.60      0.60      0.60     20774\n",
-      "   macro avg       0.27      0.33      0.23     20774\n",
-      "weighted avg       0.94      0.60      0.72     20774\n",
-      "\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "      France       0.08      0.51      0.14       488\n",
-      "       Italy       0.09      0.41      0.15       821\n",
-      "       Spain       0.03      0.33      0.06       165\n",
-      "          US       0.97      0.62      0.76     19300\n",
-      "\n",
-      "   micro avg       0.61      0.61      0.61     20774\n",
-      "   macro avg       0.29      0.47      0.28     20774\n",
-      "weighted avg       0.90      0.61      0.71     20774\n",
+      "   micro avg       0.17      0.17      0.17     20774\n",
+      "   macro avg       0.26      0.09      0.12     20774\n",
+      "weighted avg       0.62      0.17      0.26     20774\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      France       0.08      0.16      0.10      1456\n",
-      "       Italy       0.14      0.22      0.17      2429\n",
+      "      France       1.00      0.14      0.25     20666\n",
+      "       Italy       0.00      0.11      0.01       108\n",
       "       Spain       0.00      0.00      0.00         0\n",
-      "          US       0.81      0.60      0.69     16889\n",
+      "          US       0.00      0.00      0.00         0\n",
       "\n",
-      "   micro avg       0.52      0.52      0.52     20774\n",
-      "   macro avg       0.26      0.24      0.24     20774\n",
-      "weighted avg       0.68      0.52      0.59     20774\n",
-      "\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "      France       0.04      0.55      0.08       238\n",
-      "       Italy       0.00      0.83      0.00         6\n",
-      "       Spain       0.00      0.57      0.01        14\n",
-      "          US       1.00      0.61      0.75     20516\n",
-      "\n",
-      "   micro avg       0.60      0.60      0.60     20774\n",
-      "   macro avg       0.26      0.64      0.21     20774\n",
-      "weighted avg       0.98      0.60      0.74     20774\n",
+      "   micro avg       0.14      0.14      0.14     20774\n",
+      "   macro avg       0.25      0.06      0.06     20774\n",
+      "weighted avg       0.99      0.14      0.25     20774\n",
       "\n"
      ]
     }
@@ -658,6 +684,34 @@
     "for prediction in list_of_predictions:\n",
     "    print(classification_report(prediction, y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
