--- a/Out-of-Box Models.ipynb
+++ b/Out-of-Box Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from sklearn.svm import LinearSVC\n",
     "\n",
     "from xgboost import XGBClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import classification_report\n",
@@ -138,12 +139,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pick out features X and labels y"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pick out features X and labels y\n",
     "X = df.iloc[:,2:4].values\n",
     "y = df['country']"
    ]
@@ -151,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -180,18 +189,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 122,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Split dataset into test and train\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)"
+    "# Split dataset into test and train\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
    "metadata": {
     "scrolled": true
    },
@@ -200,27 +215,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[91. 60.]\n",
-      " [84. 13.]\n",
-      " [87. 26.]\n",
+      "[[91. 38.]\n",
+      " [89. 50.]\n",
+      " [87. 38.]\n",
       " ...\n",
-      " [87. 28.]\n",
-      " [90. 26.]\n",
-      " [93. 55.]]\n"
+      " [83. 14.]\n",
+      " [86. 30.]\n",
+      " [83. 38.]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "17649      Spain\n",
-       "87040         US\n",
-       "44300         US\n",
-       "101288    France\n",
-       "81544      Italy\n",
+       "102104        US\n",
+       "39339         US\n",
+       "57198         US\n",
+       "28598      Italy\n",
+       "85027     France\n",
        "Name: country, dtype: object"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,24 +246,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 124,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Initialise models\n",
-    "LR_model         = LogisticRegression(multi_class='auto', solver='lbfgs')\n",
-    "LDA_model        = LinearDiscriminantAnalysis()\n",
-    "KNN_model        = KNeighborsClassifier()\n",
-    "GaussianNB_model = GaussianNB()\n",
-    "DTree_model      = DecisionTreeClassifier()\n",
-    "SVC_model        = LinearSVC()\n",
-    "\n"
+    "# Initialise models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialise models\n",
+    "LR_model         = LogisticRegression(random_state=0, solver='lbfgs', multi_class='multinomial')\n",
+    "LDA_model        = LinearDiscriminantAnalysis()\n",
+    "KNN_model        = KNeighborsClassifier()\n",
+    "GaussianNB_model = GaussianNB()\n",
+    "DTree_model      = DecisionTreeClassifier()\n",
+    "SVC_model        = LinearSVC(multi_class='ovr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,19 +278,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RandFC_model = RandomForestClassifier(n_estimators=1000, max_depth=10, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fit the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='auto',\n",
-       "          n_jobs=None, penalty='l2', random_state=None, solver='lbfgs',\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='multinomial',\n",
+       "          n_jobs=None, penalty='l2', random_state=0, solver='lbfgs',\n",
        "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +327,7 @@
        "              solver='svd', store_covariance=False, tol=0.0001)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +349,7 @@
        "           weights='uniform')"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +369,7 @@
        "GaussianNB(priors=None, var_smoothing=1e-09)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +394,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +425,7 @@
        "     verbose=0)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +451,7 @@
        "       seed=None, silent=None, subsample=1, verbosity=1)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,11 +462,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=10, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=1000, n_jobs=None,\n",
+       "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RandFC_model.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save predictions for evaluation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save predictions for evaluation\n",
     "list_of_predictions = []\n",
     "\n",
     "LR_prediction    = LR_model.predict(X_test)\n",
@@ -453,30 +521,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
     "XGB_prediction   = xgb_model.predict(X_test)\n",
-    "list_of_predictions.append(XGB_prediction)\n"
+    "list_of_predictions.append(XGB_prediction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RandFC_prediction = RandFC_model.predict(X_test)\n",
+    "list_of_predictions.append(RandFC_prediction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6016655434677963\n",
-      "0.6017618176566862\n",
-      "0.5481370944449793\n",
-      "0.5994512371233273\n",
-      "0.6098488495234428\n",
-      "0.5244536439780495\n",
-      "0.60469818041783\n"
+      "0.598408266743686\n",
+      "0.5987291807066526\n",
+      "0.5256891627354706\n",
+      "0.5945893905843843\n",
+      "0.6076505888771221\n",
+      "0.5137190719168191\n",
+      "0.6007509386733417\n",
+      "0.6026122396585475\n"
      ]
     }
    ],
@@ -485,6 +571,34 @@
     "for prediction in list_of_predictions:\n",
     "    print(accuracy_score(prediction, y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -551,20 +665,50 @@
     }
    ],
    "source": [
-    "# Accuracy score is the simplest way to evaluate\n",
+    "# confusion_matrix for all predictions\n",
     "for prediction in list_of_predictions:\n",
     "    print(confusion_matrix(prediction, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/reedless/anaconda3/lib/python3.7/site-packages/sklearn/metrics/classification.py:1145: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      France       0.01      0.68      0.03        65\n",
+      "       Italy       0.00      0.00      0.00         0\n",
+      "       Spain       0.00      0.00      0.00         0\n",
+      "          US       1.00      0.60      0.75     20709\n",
+      "\n",
+      "   micro avg       0.60      0.60      0.60     20774\n",
+      "   macro avg       0.25      0.32      0.20     20774\n",
+      "weighted avg       1.00      0.60      0.75     20774\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      France       0.02      0.56      0.04       102\n",
+      "       Italy       0.00      0.00      0.00         0\n",
+      "       Spain       0.00      0.00      0.00         0\n",
+      "          US       1.00      0.60      0.75     20672\n",
+      "\n",
+      "   micro avg       0.60      0.60      0.60     20774\n",
+      "   macro avg       0.25      0.29      0.20     20774\n",
+      "weighted avg       0.99      0.60      0.75     20774\n",
+      "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "      France       0.18      0.27      0.22      1993\n",
@@ -575,20 +719,59 @@
       "   micro avg       0.55      0.55      0.55     20774\n",
       "   macro avg       0.32      0.34      0.32     20774\n",
       "weighted avg       0.64      0.55      0.58     20774\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      France       0.10      0.36      0.16       805\n",
+      "       Italy       0.01      0.34      0.01        79\n",
+      "       Spain       0.00      0.00      0.00         0\n",
+      "          US       0.97      0.61      0.75     19890\n",
+      "\n",
+      "   micro avg       0.60      0.60      0.60     20774\n",
+      "   macro avg       0.27      0.33      0.23     20774\n",
+      "weighted avg       0.94      0.60      0.72     20774\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      France       0.08      0.51      0.14       488\n",
+      "       Italy       0.09      0.41      0.15       821\n",
+      "       Spain       0.03      0.33      0.06       165\n",
+      "          US       0.97      0.62      0.76     19300\n",
+      "\n",
+      "   micro avg       0.61      0.61      0.61     20774\n",
+      "   macro avg       0.29      0.47      0.28     20774\n",
+      "weighted avg       0.90      0.61      0.71     20774\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      France       0.08      0.16      0.10      1456\n",
+      "       Italy       0.14      0.22      0.17      2429\n",
+      "       Spain       0.00      0.00      0.00         0\n",
+      "          US       0.81      0.60      0.69     16889\n",
+      "\n",
+      "   micro avg       0.52      0.52      0.52     20774\n",
+      "   macro avg       0.26      0.24      0.24     20774\n",
+      "weighted avg       0.68      0.52      0.59     20774\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      France       0.04      0.55      0.08       238\n",
+      "       Italy       0.00      0.83      0.00         6\n",
+      "       Spain       0.00      0.57      0.01        14\n",
+      "          US       1.00      0.61      0.75     20516\n",
+      "\n",
+      "   micro avg       0.60      0.60      0.60     20774\n",
+      "   macro avg       0.26      0.64      0.21     20774\n",
+      "weighted avg       0.98      0.60      0.74     20774\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(KNN_prediction, y_test))"
+    "# classification_report for all predictions\n",
+    "for prediction in list_of_predictions:\n",
+    "    print(classification_report(prediction, y_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
